fix(Footer): fixes color contrast issue

--- a/components/sections/Footer/Footer.module.css
+++ b/components/sections/Footer/Footer.module.css
@@ -35,7 +35,6 @@
   width: 100%;
 
   font-size: 0.8em;
-  color: rgb(150, 150, 150);
 }
 
 .details a {
